# triage-and-voice

./: .dockerignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  Makefile  README.md  SECURITY.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: test.yml
data/: escalation_contacts.json  orders.json  policies.json
docs/: BACKLOG.md  eval_results.md
docs/plans/: 2026-04-19-gate-framework-design.md  2026-04-19-gate-framework-plan.md
examples/shopco/: main.py  resolver.py  sources.py
examples/shopco/config/: shopco.yaml
examples/shopco/prompts/: triage.md
examples/shopco/prompts/voice/: crisis_warmtransfer.md  default_friendly.md  empathetic_escalation.md  harm_clarifier.md  polite_refusal.md
examples/shopco/tests/: test_shopco_flow.py  test_shopco_resolver.py  test_sources.py
examples/skycarrier/: main.py  resolver.py  sources.py
examples/skycarrier/config/: skycarrier.yaml
examples/skycarrier/data/: baggage_policy.json  bereavement_fare.json  flight_status_info.json
examples/skycarrier/prompts/: triage.md
examples/skycarrier/prompts/voice/: bereavement_support.md  factual_fare_terms.md  factual_general_info.md  polite_refusal.md
examples/skycarrier/tests/: test_skycarrier_flow.py  test_skycarrier_resolver.py
prompts/: triage.md
prompts/naive/: bot.md
prompts/voice/: formal.md
scripts/: run_eval.py
src/: api.py  config.py  gate.py  models.py  orchestrator.py  repository.py  triage.py  voice.py
src/gate/: __init__.py  config.py  contracts.py  decision.py  engine.py
src/gate/actions/: handoff.py  inject_data.py  voice_response.py
src/naive/: bot.py
tests/: scenarios.yaml  test_api.py  test_gate.py  test_models.py  test_orchestrator.py  test_repository.py  test_triage.py  test_voice.py
tests/gate/: test_config.py  test_config_loader.py  test_decision.py  test_engine_construction.py  test_engine_decide.py  test_engine_freeze.py
tests/gate/actions/: test_handoff.py  test_inject_data.py  test_voice_response.py
tests/gate/fixtures/: malformed.yaml  minimal.yaml  multi_action.yaml  unknown_action_type.yaml  unknown_persona.yaml  unknown_source.yaml  with_overrides.yaml
