[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "triage-and-voice"
version = "0.1.0"
description = "Reference implementation of the Triage-and-Voice pattern for safety-critical LLM products"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [
    { name = "svetkis" },
]
keywords = [
    "llm",
    "openai",
    "safety",
    "guardrails",
    "prompt-injection",
    "triage",
    "agent",
    "fastapi",
    "reference-implementation",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Operating System :: OS Independent",
]
dependencies = [
    "openai>=1.0",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "pyyaml>=6.0",
    "jinja2>=3.1",
    "python-dotenv>=1.0",
]

[project.urls]
# TODO: replace <owner>/<repo> after publishing to GitHub
Homepage      = "https://github.com/svetkis/triage-and-voice"
Repository    = "https://github.com/svetkis/triage-and-voice"
Issues        = "https://github.com/svetkis/triage-and-voice/issues"
Changelog     = "https://github.com/svetkis/triage-and-voice/blob/main/CHANGELOG.md"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests", "examples"]
